--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
     "next": "^14.0.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-email": "^3.0.4",
     "react-hook-form": "^7.54.1",
+    "resend": "^4.0.1",
     "typescript": "^5.3.3",
     "zod": "^3.24.1"
   },
