--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,12 @@ next-env.d.ts
 
 # contentlayer
 .contentlayer
+
+# Default ignored files
+/shelf/
+/workspace.xml
+# Editor-based HTTP Client requests
+/httpRequests/
+# Datasource local storage ignored files
+/dataSources/
+/dataSources.local.xml
