--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.1",
+    "@react-email/components": "^0.0.31",
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
