--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@headlessui/react": "^2.1.3",
     "@hookform/resolvers": "^3.9.1",
     "@react-email/components": "^0.0.31",
+    "@react-email/render": "^1.0.3",
+    "@sendgrid/mail": "^8.1.4",
     "@types/node": "^22.5.0",
     "@types/react": "^18.2.42",
     "@types/react-dom": "^18.2.17",
